--- a/consoleApp/pom.xml
+++ b/consoleApp/pom.xml
@@ -4,9 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ua.issoft</groupId>
+    <parent>
+        <groupId>ua.issoft</groupId>
+        <artifactId>onlinestore-TrasunAndrii</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <artifactId>consoleApp</artifactId>
-    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
