--- a/consoleApp/pom.xml
+++ b/consoleApp/pom.xml
@@ -3,9 +3,17 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+    <dependencies>
+        <dependency>
+            <groupId>ua.issoft.onlinestore</groupId>
+            <artifactId>store</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <parent>
-        <groupId>ua.issoft</groupId>
+        <groupId>ua.issoft.onlinestore</groupId>
         <artifactId>onlinestore-TrasunAndrii</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
