--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ua.issoft</groupId>
+        <groupId>ua.issoft.onlinestore</groupId>
         <artifactId>onlinestore-TrasunAndrii</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
