--- a/store/pom.xml
+++ b/store/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ua.issoft</groupId>
+        <groupId>ua.issoft.onlinestore</groupId>
         <artifactId>onlinestore-TrasunAndrii</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -29,6 +29,13 @@
             <groupId>org.reflections</groupId>
             <artifactId>reflections</artifactId>
             <version>0.10.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ua.issoft.onlinestore</groupId>
+            <artifactId>domain</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
